WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162776
REGRESSION(
r206505
) [GTK] Build broken with GTK+ 3.14
https://bugs.webkit.org/show_bug.cgi?id=162776
Summary
REGRESSION(r206505) [GTK] Build broken with GTK+ 3.14
Carlos Alberto Lopez Perez
Reported
2016-09-30 02:21:24 PDT
Trying to build current trunk (
r206631
) of WebKitGTK+ on Debian stable (GTK+ 3.14.5) without the internal jhbuild results in this: [.... compiler parameters .... ] -o Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/gtk/WebContextMenuProxyGtk.cpp.o -c ../../Source/WebKit2/UIProcess/gtk/WebContextMenuProxyGtk.cpp ../../Source/WebKit2/UIProcess/gtk/WebContextMenuProxyGtk.cpp:69:93: error: use of undeclared identifier 'gtk_widget_get_action_group'; did you mean 'gtk_widget_set_margin_top'? g_action_map_add_action(((((GActionMap*) g_type_check_instance_cast ((GTypeInstance*) ((gtk_widget_get_action_group(((((GtkWidget*) g_type_check_instance_cast ((GTypeInstance*) ((m_menu)), ((gtk_widget_get_type ())))))), gContextMenuItemGroup))), ((g_action_map_get_type ())))))), action); ^~~~~~~~~~~~~~~~~~~~~~~~~~~ gtk_widget_set_margin_top /usr/include/gtk-3.0/gtk/gtkwidget.h:1115:6: note: 'gtk_widget_set_margin_top' declared here void gtk_widget_set_margin_top (GtkWidget *widget, ^ ../../Source/WebKit2/UIProcess/gtk/WebContextMenuProxyGtk.cpp:69:226: error: cannot initialize a parameter of type 'gint' (aka 'int') with an lvalue of type 'const char *' g_action_map_add_action(((((GActionMap*) g_type_check_instance_cast ((GTypeInstance*) ((gtk_widget_get_action_group(((((GtkWidget*) g_type_check_instance_cast ((GTypeInstance*) ((m_menu)), ((gtk_widget_get_type ())))))), gContextMenuItemGroup))), ((g_action_map_get_type ())))))), action); ^~~~~~~~~~~~~~~~~~~~~ /usr/include/gtk-3.0/gtk/gtkwidget.h:1116:45: note: passing argument to parameter 'margin' here gint margin); ^ 2 errors generated.
Attachments
Patch
(2.64 KB, patch)
2016-10-26 00:43 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-10-03 04:03:00 PDT
I'm sorry about this, I checked the Since tag of gtk_widget_set_action_group() and assumed it was the same for the getter. I guess we can simply save the action group somewhere to fix this instead of querying the widget.
Carlos Garcia Campos
Comment 2
2016-10-26 00:43:46 PDT
Created
attachment 292884
[details]
Patch
Carlos Garcia Campos
Comment 3
2016-10-26 00:48:14 PDT
Committed
r207870
: <
http://trac.webkit.org/changeset/207870
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug