REGRESSION(r206505) [GTK] Build broken with GTK+ 3.14 https://bugs.webkit.org/show_bug.cgi?id=162776

Reviewed by Xabier Rodriguez-Calvar.

Do not use gtk_widget_get_action_group() when GTK+ < 3.16, use g_object_set instead to attach the action group
to the menu widget.

* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::WebContextMenuProxyGtk::append):
(WebKit::WebContextMenuProxyGtk::WebContextMenuProxyGtk):
(WebKit::WebContextMenuProxyGtk::~WebContextMenuProxyGtk):

Canonical link: https://commits.webkit.org/181724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207870 268f45cc-cd09-0410-ab3c-d52691b4dbfc